--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "dependencies": {
-    "escape-string-regexp": "^1.0.5",
-    "form-serialize": "^0.7.2",
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-notifications": "^1.4.2",
-    "react-router-dom": "^4.1.1",
-    "sort-by": "^1.2.0"
-  },
-  "devDependencies": {
-    "react-scripts": "0.9.5"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+    "dependencies": {
+        "escape-string-regexp": "^1.0.5",
+        "form-serialize": "^0.7.2",
+        "prop-types": "^15.5.10",
+        "react": "^15.6.1",
+        "react-dom": "^15.6.1",
+        "react-loading": "^0.1.4",
+        "react-notifications": "^1.4.2",
+        "react-router-dom": "^4.1.1",
+        "sort-by": "^1.2.0"
+    },
+    "devDependencies": {
+        "react-scripts": "0.9.5"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject"
+    }
 }
